maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  keepHandOnSideWall()
}


def keeHandOnSideWall(){
  while (!isFacingWall()){
    left()
  }
  left()
}